--- a/2018/18-09-monash-mathematics.tex
+++ b/2018/18-09-monash-mathematics.tex
@@ -366,7 +366,7 @@ solve(F == 0, upT, bcs=bcs)
 \begin{frame}
   \frametitle{Looking for abstractions}
   \begin{itemize}
-  \item Mathmatics just says ``here is the integral to compute on each
+  \item Mathematics just says ``here is the integral to compute on each
     element, do that everywhere''
   \item Computer implementation chooses how to do so
   \end{itemize}
@@ -1013,7 +1013,7 @@ F = (dot(curl(u), curl(v)) - dot(B, v))*dx
   \begin{columns}
     \begin{column}{0.6\textwidth}
       \begin{block}{Solution}
-        We use an affine-equivalent analog of the Bernard-Raugel
+        We use an affine-equivalent analog of the Bernardi-Raugel
         element: $\BRzero$.
       \end{block}
     \end{column}
